--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
 
   .btn {
     background-color: var(--color-button);
-    color: white;
+    /* color: white; */
     font-weight: 500;
     font-size: 1rem;
     padding: 0.6em 1.2em;
