temporary changes in the bg and added the color-effect

--- a/src/index.css
+++ b/src/index.css
@@ -70,11 +70,11 @@
   html,
   body,
   #root {
-    --color-from: #E0AC85;
-    --color-to: #e4d2c4;
+    /* --color-from: #E0AC85;
+    --color-to: #e4d2c4; */
     height: 100%;
     margin: 0;
-    background: var(--color-bg);
+    background: #FFF;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -131,6 +131,17 @@
     border-radius: var(--radius-2xl);
     box-shadow: var(--shadow-card);
     padding: 1.5rem;
+  }
+
+  .color-effect{
+    border-radius: 50%;
+    background: #E1BEA3;
+    filter: blur(350px);
+    top: -10%;
+    left: -10%;
+    height: 740px;
+    width: 740px;
+    z-index: -1;
   }
 
   .btn {
